# backend/internal/auth/dto/auth_tokens.go
@@ -1,0 +1,6 @@
+package dto
+
+type AuthTokens struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
